# millennium

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: audit.toml  config.toml
.firelight/: settings.json
.icons/: icon.icns  icon_macos.pdn
docs/: babel.config.js  (+5 more)
examples/cxx/: .millenniumrc  CMakeLists.txt  index.html
examples/cxx/.millennium/: Cargo.toml  build.rs  millennium.cmake
examples/cxx/.millennium/src/: lib.rs
examples/cxx/src/: main.cc
examples/hello-world/: .millenniumrc  Cargo.toml  README.md  index.html
examples/helloworld/: .millenniumrc  Cargo.toml  build.rs  index.html
examples/helloworld/src/: main.rs
src/millennium/: Cargo.toml  README.md  build.rs
src/millennium-bindings-cxx/: Cargo.toml
src/millennium-bindings-cxx/src/: lib.rs  millennium.h  template.rs
src/millennium-build/: Cargo.toml  README.md
src/millennium-build/src/: lib.rs  static_vcruntime.rs
src/millennium-build/src/codegen/: context.rs  mod.rs
src/millennium-cli-node/: Cargo.toml  build.rs  main.d.ts  millennium.js
src/millennium-cli-node/npm/linux-arm-gnueabihf/: package.json
src/millennium-cli-node/npm/linux-arm64-gnu/: package.json
src/millennium-cli-node/npm/linux-arm64-musl/: package.json
src/millennium-cli-node/npm/linux-x64-gnu/: package.json
src/millennium-cli-node/npm/linux-x64-musl/: package.json
src/millennium-cli-node/npm/win32-x64-msvc/: package.json
src/millennium-codegen/: Cargo.toml  README.md
src/millennium-codegen/src/: context.rs  embedded_assets.rs  lib.rs
src/millennium-macros/: Cargo.toml  README.md
src/millennium-macros/src/: command_module.rs  context.rs  lib.rs  runtime.rs
src/millennium-macros/src/command/: handler.rs  mod.rs  wrapper.rs
src/millennium-plugin-vibrancy/: Cargo.toml  README.md
src/millennium-plugin-vibrancy/src/: lib.rs  macos.rs  windows.rs
src/millennium-runtime/: Cargo.toml  README.md
src/millennium-runtime-webview/: Cargo.toml  README.md
src/millennium-runtime-webview/src/: clipboard.rs  global_shortcut.rs  lib.rs  system_tray.rs  webview.rs
src/millennium-runtime/src/: lib.rs  menu.rs  monitor.rs  webview.rs  window.rs
src/millennium-runtime/src/http/: mime_type.rs  mod.rs  request.rs  response.rs
src/millennium-runtime/src/window/: dpi.rs
src/millennium-utils/: Cargo.toml  README.md
src/millennium-utils/src/: assets.rs  config.rs  html.rs  io.rs  lib.rs  platform.rs  resources.rs
src/millennium-utils/src/config/: parse.rs
src/millennium-utils/src/pattern/: isolation.js  isolation.rs  mod.rs
src/millennium-utils/src/platform/: starting_binary.rs
src/millennium/.scripts/: loop_qc.sh
src/millennium/scripts/: bundle.js  core.js  freeze_prototype.js  hotkey.js  init.js  ipc.js  isolation.js  pattern.js  types.d.ts
src/millennium/src/: app.rs  async_runtime.rs  command.rs  endpoints.rs  error.rs  event.rs  hooks.rs  lib.rs  manager.rs  pattern.rs  plugin.rs  settings.rs  state.rs  window.rs
src/millennium/src/api/: cli.rs  dialog.rs  dir.rs  error.rs  file.rs  http.rs  ipc.rs  mod.rs  notification.rs  path.rs  process.rs  shell.rs  version.rs
src/millennium/src/api/cli/: macros.rs
src/millennium/src/api/file/: extract.rs  file_move.rs
src/millennium/src/api/process/: command.rs
src/millennium/src/app/: tray.rs
src/millennium/src/endpoints/: app.rs  cli.rs  clipboard.rs  dialog.rs  event.rs  file_system.rs  global_shortcut.rs  http.rs  notification.rs  operating_system.rs  path.rs  process.rs  shell.rs  window.rs
src/millennium/src/scope/: fs.rs  http.rs  mod.rs  shell.rs
src/millennium/src/test/: mock_runtime.rs  mod.rs
src/millennium/src/updater/: core.rs  error.rs  mod.rs
src/millennium/src/window/: menu.rs
src/millennium/test/api/: test.txt
src/millennium/test/fixture/: .millenniumrc
src/millennium/test/fixture/src/: index.html
tools/millennium-bundler/: Cargo.toml  README.md
tools/millennium-bundler/src/: bundle.rs  error.rs  lib.rs
tools/millennium-bundler/src/bundle/: common.rs  platform.rs  settings.rs  updater_bundle.rs
tools/millennium-bundler/src/bundle/linux/: appimage.rs  debian.rs  mod.rs  rpm.rs
tools/millennium-bundler/src/bundle/linux/templates/: appimage
tools/millennium-bundler/src/bundle/macos/: app.rs  dmg.rs  icon.rs  ios.rs  mod.rs  sign.rs
tools/millennium-bundler/src/bundle/windows/: mod.rs  msi.rs  sign.rs
tools/millennium-bundler/src/bundle/windows/msi/: default-locale-strings.xml  languages.json  wix.rs
tools/millennium-bundler/src/bundle/windows/templates/: main.wxs  update-task.xml
tools/millennium-cli/: Cargo.toml  README.md  metadata.json  millennium-dev-watcher.gitignore  schema.json
tools/millennium-cli-node/: Cargo.toml  index.js  main.d.ts  main.js  millennium.js  package.json  pnpm-lock.yaml
tools/millennium-cli-node/npm/darwin-arm64/: package.json
tools/millennium-cli-node/npm/darwin-x64/: package.json
tools/millennium-cli-node/npm/linux-arm-gnueabihf/: package.json
tools/millennium-cli-node/npm/linux-arm64-gnu/: package.json
tools/millennium-cli-node/npm/linux-arm64-musl/: package.json
tools/millennium-cli-node/npm/linux-x64-gnu/: package.json
tools/millennium-cli-node/npm/linux-x64-musl/: package.json
tools/millennium-cli-node/npm/win32-ia32-msvc/: package.json
tools/millennium-cli-node/npm/win32-x64-msvc/: package.json
tools/millennium-cli-node/src/: lib.rs
tools/millennium-cli/scripts/: kill-children.sh
tools/millennium-cli/src/: build.rs  dev.rs  info.rs  init.rs  lib.rs  main.rs
tools/millennium-cli/src/helpers/: app_paths.rs  config.rs  manifest.rs  mod.rs  template.rs  updater_signature.rs
tools/millennium-cli/src/interface/: mod.rs  rust.rs
tools/millennium-cli/src/interface/rust/: manifest.rs
tools/millennium-cli/src/plugin/: init.rs
tools/millennium-cli/src/signer/: sign.rs
tools/millennium-cli/templates/: .millenniumrc
tools/millennium-cli/templates/.icons/: icon.icns
tools/millennium-cli/templates/basic/: .millenniumrc  Cargo.crate-manifest  build.rs  index.html
tools/millennium-cli/templates/basic/src/: main.rs
(+202 files in other folders)
