[package]
name = "helloworld"
version = "0.1.0"
description = "A very simple Millennium Appplication"
edition = "2021"
rust-version = "1.57"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[build-dependencies]
millennium-build = { path = "../../src/millennium-build", features = [ "codegen" ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
millennium = { path = "../../src/millennium", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "millennium/custom-protocol" ]
