[package]
publish = false
name = "millennium-bindings-cxx"
description = "Make tiny, secure apps for all desktop platforms"
version = "1.0.0-beta.3"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	"/test",
	"/target"
]

[dependencies]
regex = "1.5"
millennium = { version = "1.0.0-beta.3", path = "../millennium" }
