[package]
name = "millennium-build"
version = "1.0.0-rc.3"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
description = "build time code to pair with Millennium"
edition = "2021"
rust-version = "1.57"
exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "doc_cfg" ]

[dependencies]
anyhow = "1"
quote = { version = "1", optional = true }
millennium-codegen = { path = "../millennium-codegen", optional = true }
millennium-utils = { path = "../millennium-utils", features = [ "build", "resources" ] }
cargo_toml = "0.11"
serde_json = "1"

[target."cfg(windows)".dependencies]
winres = "0.1"

[features]
codegen = [ "millennium-codegen", "quote" ]
isolation = [ "millennium-codegen/isolation", "millennium-utils/isolation" ]
config-json5 = [ "millennium-utils/config-json5" ]
