[package]
name = "millennium-build"
description = "Compile-time helpers for Millennium"
version = "1.0.0-beta.1"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "doc_cfg" ]
all-features = true

[dependencies]
anyhow = "1"
quote = { version = "1", optional = true }
millennium-codegen = { version = "1.0.0-beta.1", path = "../millennium-codegen", optional = true }
millennium-utils = { version = "1.0.0-beta.1", path = "../millennium-utils", features = [ "build", "resources" ] }
cargo_toml = "0.11"
serde_json = "1"

[target."cfg(windows)".dependencies]
winres = "0.1"

[features]
codegen = [ "millennium-codegen", "quote" ]
isolation = [ "millennium-codegen/isolation", "millennium-utils/isolation" ]
config-json5 = [ "millennium-utils/config-json5" ]
