[package]
edition = "2021"
name = "millennium-cli-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2", default-features = false, features = ["napi4"] }
napi-derive = "2.2"
millennium-cli = { path = "../millennium-cli" }

[build-dependencies]
napi-build = "1.2"
