[package]
publish = false
name = "millennium-codegen"
description = "Code generation macros for Millennium"
version = "1.0.0-rc.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[dependencies]
sha2 = "0.10"
base64 = "0.13"
blake3 = { version = "1.3", features = [ "rayon" ] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
millennium-utils = { path = "../millennium-utils", features = [ "build" ] }
thiserror = "1"
walkdir = "2"
zstd = { version = "0.10", optional = true }
regex = { version = "1", optional = true }
uuid = { version = "0.8", features = [ "v4" ] }

[target."cfg(windows)".dependencies]
ico = "0.1"

[target."cfg(not(windows))".dependencies]
png = "0.16"

[features]
default = [ "compression" ]
compression = [ "zstd", "millennium-utils/compression" ]
isolation = [ "millennium-utils/isolation" ]
__isolation-docs = [ "millennium-utils/__isolation-docs" ]
shell-scope = [ "regex" ]
config-json5 = [ "millennium-utils/config-json5" ]
