[package]
name = "millennium-codegen"
description = "Code generation macros for Millennium"
version = "1.0.0-beta.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[dependencies]
sha2 = "0.10"
base64 = "0.13"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
millennium-utils = { version = "1.0.0-beta.2", path = "../millennium-utils", features = [ "build" ] }
thiserror = "1"
walkdir = "2"
brotli = { version = "3", optional = true, default-features = false, features = [ "std" ] }
regex = { version = "1.5.5", optional = true }
uuid = { version = "0.8", features = [ "v4" ] }

[target."cfg(windows)".dependencies]
ico = "0.1"

[target."cfg(target_os = \"linux\")".dependencies]
png = "0.17"

[features]
default = [ "compression" ]
compression = [ "brotli", "millennium-utils/compression" ]
isolation = [ "millennium-utils/isolation" ]
shell-scope = [ "regex" ]
config-json5 = [ "millennium-utils/config-json5" ]
