[package]
name = "millennium-codegen"
description = "Code generation macros for Millennium"
version = "1.0.0-beta.3"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[dependencies]
sha2 = "0.10"
base64 = "0.13"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
millennium-utils = { version = "1.0.0-beta.3", path = "../millennium-utils", features = [ "build" ] }
thiserror = "1"
walkdir = "2"
brotli = { version = "3", optional = true, default-features = false, features = [ "std" ] }
regex = { version = "1.6.0", optional = true }
uuid = { version = "1", features = [ "v4" ] }
semver = "1"
ico = "0.1"
png = "0.17"
json-patch = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
plist = "1"
time = { version = "0.3", features = [ "parsing", "formatting" ] }

[features]
default = [ "compression" ]
compression = [ "brotli", "millennium-utils/compression" ]
isolation = [ "millennium-utils/isolation" ]
shell-scope = [ "regex" ]
