[package]
name = "millennium-macros"
description = "Macros for the Millennium crate"
version = "1.0.0-beta.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "os", "filesystem", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "full" ] }
heck = "0.4"
millennium-codegen = { version = "1.0.0-beta.2", path = "../millennium-codegen", default-features = false }
millennium-utils = { version = "1.0.0-beta.2", path = "../millennium-utils" }

[features]
custom-protocol = [ ]
compression = [ "millennium-codegen/compression" ]
isolation = [ "millennium-codegen/isolation" ]
shell-scope = [ "millennium-codegen/shell-scope" ]
