[package]
publish = false
name = "millennium-runtime-webview"
description = "Millennium Webview bindings to the Millennium runtime"
version = "1.0.0-beta.1"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[dependencies]
millennium-webview = { version = "1.0.0-beta.1", path = "../millennium-webview", default-features = false, features = [ "file-drop", "protocol" ] }
millennium-runtime = { version = "1.0.0-beta.1", path = "../millennium-runtime" }
millennium-utils = { version = "1.0.0-beta.1", path = "../millennium-utils" }
uuid = { version = "0.8.2", features = [ "v4" ] }
rand = "0.8"

[target."cfg(windows)".dependencies]
webview2-com = "0.13.0"

	[target."cfg(windows)".dependencies.windows]
	version = "0.30.0"
	features = [ "Win32_Foundation" ]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.15", features = [ "v3_20" ] }

[features]
dox = [ "millennium-webview/dox" ]
devtools = [ "millennium-webview/devtool", "millennium-runtime/devtools" ]
system-tray = [ "millennium-webview/tray", "millennium-runtime/system-tray" ]
macos-private-api = [
	"millennium-webview/fullscreen",
	"millennium-webview/transparent",
	"millennium-runtime/macos-private-api"
]
__rust_analyzer_hack = []
objc-exception = [ "millennium-webview/objc-exception" ]
