[package]
name = "millennium-runtime-webview"
description = "Millennium Webview bindings to the Millennium runtime"
version = "1.0.0-beta.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[dependencies]
millennium-webview = { version = "1.0.0-beta.2", path = "../millennium-webview", default-features = false, features = [ "file-drop", "protocol" ] }
millennium-runtime = { version = "1.0.0-beta.2", path = "../millennium-runtime" }
millennium-utils = { version = "1.0.0-beta.2", path = "../millennium-utils" }
uuid = { version = "1", features = [ "v4" ] }
rand = "0.8"

[target."cfg(windows)".dependencies]
webview2-com = "0.16.0"

[target."cfg(windows)".dependencies.windows]
version = "0.37.0"
features = [ "Win32_Foundation" ]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.15", features = [ "v3_20" ] }
webkit2gtk = { version = "0.18", features = [ "v2_22" ] }
percent-encoding = "2.1"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
cocoa = "0.24"

[features]
dox = [ "millennium-webview/dox" ]
devtools = [ "millennium-webview/devtools", "millennium-runtime/devtools" ]
system-tray = [ "millennium-runtime/system-tray", "millennium-webview/tray" ]
macos-private-api = [
	"millennium-webview/fullscreen",
	"millennium-webview/transparent",
	"millennium-runtime/macos-private-api"
]
__rust_analyzer_hack = []
objc-exception = [ "millennium-webview/objc-exception" ]
global-shortcut = [ "millennium-runtime/global-shortcut" ]
clipboard = [ "millennium-runtime/clipboard" ]
