[package]
publish = false
name = "millennium-runtime"
description = "Runtime for Millennium applications"
version = "0.3.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	".license_template",
	"CHANGELOG.md",
	"/target"
]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "doc_cfg" ]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
	"x86_64-pc-windows-msvc",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin"
]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
millennium-utils = { path = "../millennium-utils" }
uuid = { version = "0.8.2", features = [ "v4" ] }
http = "0.2.4"
http-range = "0.1.4"
infer = "0.4"

[target."cfg(windows)".dependencies]
webview2-com = "0.13.0"

	[target."cfg(windows)".dependencies.windows]
	version = "0.30.0"
	features = [ "Win32_Foundation" ]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.15", features = [ "v3_20" ] }

[features]
devtools = [ ]
system-tray = [ ]
macos-private-api = [ ]
