[package]
name = "millennium-utils"
publish = false
version = "1.0.0-rc.2"
authors = [ "pyke.io", "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0"
repository = "https://github.com/pykeio/millennium"
description = "Utilities for Millennium"
edition = "2021"
rust-version = "1.57"
exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0.30"
phf = { version = "0.10", features = [ "macros" ] }
zstd = { version = "0.10", optional = true }
url = { version = "2.2", features = [ "serde" ] }
kuchiki = "0.8"
html5ever = "0.25"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
schemars = { version = "0.8", features = [ "url" ], optional = true }
serde_with = "1.12"
aes-gcm = { version = "0.9", optional = true }
ring = { version = "0.16", optional = true, features = [ "std" ] }
once_cell = { version = "1.9", optional = true }
serialize-to-javascript = "=0.1.1"
ctor = "0.1"
json5 = { version = "0.4", optional = true }
json-patch = "0.2"
glob = { version = "0.3.0", optional = true }
walkdir = { version = "2", optional = true }

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.4"

[features]
build = [ "proc-macro2", "quote" ]
compression = [ "zstd" ]
schema = [ "schemars" ]
isolation = [ "aes-gcm", "ring", "once_cell" ]
process-relaunch-dangerous-allow-symlink-macos = [ ]
config-json5 = [ "json5" ]
resources = [ "glob", "walkdir" ]
