[package]
name = "millennium"
description = "Create consistent, light, & secure apps that work on all platforms, using HTML, CSS, and JavaScript"
version = "1.0.0-beta.2"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	"/test",
	"/target"
]

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg", "doc_cfg" ]
no-default-features = true
features = [
	"compression",
	"millennium_webview",
	"custom-protocol",
	"api-all",
	"cli",
	"__updater-docs",
	"system-tray",
	"devtools",
	"dox"
]
default-target = "x86_64-unknown-linux-gnu"
targets = [
	"x86_64-pc-windows-msvc",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin"
]

[package.metadata.cargo-udeps.ignore]
normal = [ "attohttpc" ]

[dependencies]
serde_json = { version = "1.0", features = [ "raw_value" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.16", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util" ] }
futures = "0.3"
uuid = { version = "1", features = [ "v4" ] }
url = { version = "2.2" }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.10"
millennium-runtime = { version = "1.0.0-beta.2", path = "../millennium-runtime" }
millennium-macros = { version = "1.0.0-beta.2", path = "../millennium-macros" }
millennium-utils = { version = "1.0.0-beta.2", path = "../millennium-utils" }
millennium-runtime-webview = { version = "1.0.0-beta.2", path = "../millennium-runtime-webview", optional = true }
rand = "0.8"
semver = "1.0"
serde_repr = "0.1"
state = "0.5"
tar = "0.4.36"
tempfile = "3"
zip = { version = "0.6", default-features = false, optional = true }
ignore = "0.4"
either = "1.6"
flate2 = "1.0"
http = "0.2"
bincode = "1.3"
dirs-next = "2.0"
percent-encoding = "2.1"
base64 = { version = "0.13", optional = true }
clap = { version = "3", optional = true }
notify-rust = { version = "4.5", optional = true }
reqwest = { version = "0.11", features = [ "json", "multipart", "stream" ], optional = true }
bytes = { version = "1", features = [ "serde" ], optional = true }
attohttpc = { version = "0.19", features = [ "json", "form" ], optional = true }
open = { version = "2.0", optional = true }
shared_child = { version = "1.0", optional = true }
os_pipe = { version = "1.0", optional = true }
memchr = { version = "2.4", optional = true }
rfd = { version = "0.8", optional = true }
raw-window-handle = "0.4.2"
minisign-verify = { version = "0.2", optional = true }
os_info = { version = "3.2.0", optional = true }
futures-lite = "1.12"
regex = { version = "1.5.5", optional = true }
glob = "0.3"
data-url = { version = "0.1", optional = true }
serialize-to-javascript = "=0.1.1"
infer = { version = "0.7", optional = true }
png = { version = "0.17", optional = true }
ico = { version = "0.1", optional = true }
interprocess = "1.1"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.15", features = [ "v3_20" ] }
glib = "0.15"

[target."cfg(target_os = \"macos\")".dependencies]
embed_plist = "1.2"

[target."cfg(windows)".dependencies.windows]
version = "0.30.0"
features = [ "Win32_Foundation" ]

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
mockito = "0.31"
proptest = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
millennium = { path = ".", default-features = false, features = [ "millennium_webview" ] }
tokio-test = "0.4.2"
tokio = { version = "1.16", features = [ "full" ] }

[features]
default = [ "millennium_webview", "compression", "objc-exception", "ayatana-tray" ]
compression = [ "millennium-macros/compression", "millennium-utils/compression" ]
millennium_webview = [ "millennium-runtime-webview" ]
objc-exception = [ "millennium-runtime-webview/objc-exception" ]
ayatana-tray = [ "millennium-runtime-webview/ayatana-tray" ]
gtk-tray = [ "millennium-runtime-webview/gtk-tray" ]
isolation = [ "millennium-utils/isolation", "millennium-macros/isolation" ]
custom-protocol = [ "millennium-macros/custom-protocol" ]
updater = [ "minisign-verify", "base64", "http-api", "dialog-ask", "fs-extract-api" ]
__updater-docs = [ "minisign-verify", "base64", "http-api", "dialog-ask" ]
http-api = [ "attohttpc", "bytes" ]
shell-open-api = [ "open", "regex", "millennium-macros/shell-scope" ]
fs-extract-api = [ "zip" ]
reqwest-client = [ "reqwest" ]
process-command-api = [ "shared_child", "os_pipe", "memchr" ]
dialog = [ "rfd" ]
notification = [ "notify-rust" ]
cli = [ "clap" ]
system-tray = [ "millennium-runtime/system-tray", "millennium-runtime-webview/system-tray" ]
devtools = [ "millennium-runtime/devtools", "millennium-runtime-webview/devtools" ]
dox = [ "millennium-runtime-webview/dox" ]
macos-private-api = [
	"millennium-runtime/macos-private-api",
	"millennium-runtime-webview/macos-private-api"
]
window-data-url = [ "data-url" ]
api-all = [
	"clipboard-all",
	"dialog-all",
	"fs-all",
	"global-shortcut-all",
	"http-all",
	"notification-all",
	"os-all",
	"path-all",
	"process-all",
	"protocol-all",
	"shell-all",
	"window-all"
]
clipboard-all = [ "clipboard-write-text", "clipboard-read-text" ]
clipboard-read-text = [ ]
clipboard-write-text = [ ]
config-json5 = [ "millennium-macros/config-json5" ]
dialog-all = [ "dialog-open", "dialog-save", "dialog-message", "dialog-ask" ]
dialog-ask = [ "dialog" ]
dialog-confirm = [ "dialog" ]
dialog-message = [ "dialog" ]
dialog-open = [ "dialog" ]
dialog-save = [ "dialog" ]
fs-all = [
	"fs-copy-file",
	"fs-create-dir",
	"fs-read-file",
	"fs-read-dir",
	"fs-remove-dir",
	"fs-remove-file",
	"fs-write-file",
	"fs-rename",
	"fs-exists"
]
fs-copy-file = [ ]
fs-create-dir = [ ]
fs-read-file = [ ]
fs-read-dir = [ ]
fs-remove-dir = [ ]
fs-remove-file = [ ]
fs-write-file = [ ]
fs-rename = [ ]
fs-exists = [ ]
global-shortcut-all = [ ]
http-all = [ "http-request" ]
http-request = [ "http-api" ]
notification-all = [ "notification", "dialog-ask" ]
os-all = [ "os_info" ]
path-all = [ ]
process-all = [ "process-relaunch", "process-exit" ]
process-exit = [ ]
process-relaunch = [ ]
process-relaunch-dangerous-allow-symlink-macos = [ "millennium-utils/process-relaunch-dangerous-allow-symlink-macos" ]
protocol-all = [ "protocol-asset" ]
protocol-asset = [ ]
shell-all = [ "shell-execute", "shell-sidecar", "shell-open" ]
shell-execute = [ "process-command-api", "regex", "millennium-macros/shell-scope" ]
shell-sidecar = [ "process-command-api", "regex", "millennium-macros/shell-scope" ]
shell-open = [ "shell-open-api" ]
window-all = [
	"window-create",
	"window-center",
	"window-request-user-attention",
	"window-set-resizable",
	"window-set-title",
	"window-maximize",
	"window-unmaximize",
	"window-minimize",
	"window-unminimize",
	"window-show",
	"window-hide",
	"window-close",
	"window-set-decorations",
	"window-set-always-on-top",
	"window-set-size",
	"window-set-min-size",
	"window-set-max-size",
	"window-set-position",
	"window-set-fullscreen",
	"window-set-focus",
	"window-set-icon",
	"window-set-skip-taskbar",
	"window-start-dragging",
	"window-print"
]
window-create = [ ]
window-center = [ ]
window-request-user-attention = [ ]
window-set-resizable = [ ]
window-set-title = [ ]
window-maximize = [ ]
window-unmaximize = [ ]
window-minimize = [ ]
window-unminimize = [ ]
window-show = [ ]
window-hide = [ ]
window-close = [ ]
window-set-decorations = [ ]
window-set-always-on-top = [ ]
window-set-size = [ ]
window-set-min-size = [ ]
window-set-max-size = [ ]
window-set-position = [ ]
window-set-fullscreen = [ ]
window-set-focus = [ ]
window-set-icon = [ ]
window-set-skip-taskbar = [ ]
window-start-dragging = [ ]
window-print = [ ]
icon-ico = [ "infer", "ico" ]
icon-png = [ "infer", "png" ]
__rust_analyzer_hack = [ ]
