[package]
name = "millennium-bundler"
description = "Wrap Rust executables in OS-specific app bundles for Millennium"
version = "1.0.0-beta.2"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "George Burton <burtonageo@gmail.com>", "Tauri Programme within The Commons Conservancy" ]
categories = [ "command-line-utilities", "development-tools::cargo-plugins" ]
rust-version = "1.57"
edition = "2021"
exclude = [
	"/target"
]

[dependencies]
millennium-utils = { version = "1.0.0-beta.2", path = "../../src/millennium-utils", features = [ "resources" ] }
image = "0.24.2"
libflate = "1.2"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
strsim = "0.10.0"
tar = "0.4.38"
toml = "0.5.9"
walkdir = "2"
handlebars = "4.2"
tempfile = "3.3.0"
log = { version = "0.4.17", features = [ "kv_unstable" ] }
dirs-next = "2.0"

[target."cfg(target_os = \"windows\")".dependencies]
attohttpc = "0.19"
uuid = { version = "1", features = [ "v4", "v5" ] }
bitness = "0.4"
winreg = "0.10"
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
zip = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
icns = "0.3"
time = { version = "0.3", features = [ "formatting" ] }

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
regex = "1"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.4"
ar = "0.9.0"
md5 = "0.7.0"

[lib]
name = "millennium_bundler"
path = "src/lib.rs"
