[package]
publish = false
edition = "2021"
name = "millennium-cli-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.4", default-features = false, features = [ "napi4" ] }
napi-derive = "2.4"
millennium-cli = { version = "1.0.0-beta.2", path = "../millennium-cli" }

[build-dependencies]
napi-build = "1.2"
