[package]
publish = false
edition = "2021"
name = "millennium-cli-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5", default-features = false, features = [ "napi4" ] }
napi-derive = "2.5"
millennium-cli = { version = "1.0.0-beta.3", path = "../millennium-cli" }

[build-dependencies]
napi-build = "2.0"
