[package]
publish = false
edition = "2021"
name = "millennium-cli-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6", default-features = false, features = [ "napi4" ] }
napi-derive = "2.6"
millennium-cli = { version = "1.0.0-beta.3", path = "../millennium-cli" }
log = "0.4.17"

[build-dependencies]
napi-build = "2.0"
