[package]
name = "millennium-cli"
description = "Command line interface for building Millennium apps"
version = "1.0.0-beta.1"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
include = [
	"src/",
	"/templates",
	"MergeModules/",
	"*.json",
	"*.rs",
	"vswhere.exe"
]

[[bin]]
name = "cargo-millennium"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
anyhow = "1.0"
millennium-bundler = { version = "1.0.0-beta.1", path = "../millennium-bundler" }
colored = "2.0"
once_cell = "1.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.12"
notify = "4.0"
shared_child = "1.0"
toml_edit = "0.13"
json-patch = "0.2"
millennium-utils = { version = "1.0.0-beta.1", path = "../../src/millennium-utils", features = [ "isolation", "schema", "config-json5" ] }
toml = "0.5"
valico = "3.6"
handlebars = "4.2"
include_dir = "0.7"
minisign = "0.7"
base64 = "0.13.0"
ureq = "2.4"
os_info = "3.2"
semver = "1.0"
regex = "1.5.5"
lazy_static = "1"
libc = "0.2"
terminal_size = "0.1"
unicode-width = "0.1"
tempfile = "3"
zeroize = "1.5"
glob = "0.3"
heck = "0.4"
dialoguer = "0.10"
url = { version = "2.2", features = [ "serde" ] }
os_pipe = "1"
ignore = "0.4"
ctrlc = "3.2"

[target."cfg(windows)".dependencies]
encode_unicode = "0.3"

[target."cfg(not(windows))".dependencies]
humansize = "1.1"

[target."cfg(target_os = \"linux\")".build-dependencies]
heck = "0.4"

[build-dependencies]
millennium-utils = { version = "1.0.0-beta.1", path = "../../src/millennium-utils", features = [ "schema", "isolation" ] }
schemars = { version = "0.8", features = [ "url" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.12"
url = { version = "2.2", features = [ "serde" ] }
